compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__field_decl.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(a: i32,))"
---
Hir {
    structs: [
        Struct {
            fns: [],
            fields: [
                FieldDecl {
                    name: "a",
                    ty: 0,
                },
            ],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [
                    BuiltinType(
                        I32,
                    ),
                ],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
}
