compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__no_return.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn main() {}))"
---
Hir {
    structs: [
        Struct {
            fns: [
                FnDecl {
                    is_pub: false,
                    name: "main",
                    params: [],
                    return_ty: None,
                    body: Block {
                        stmts: [],
                        returns: None,
                    },
                    ctx: Ctx {
                        params: [],
                        exprs: [],
                        lets: [],
                        parent_captures: [],
                    },
                },
            ],
            fields: [],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
}
